--- a/login.css
+++ b/login.css
@@ -6,73 +6,112 @@
   body {
     margin: 0;
     padding: 0;
-  }
-  
-  .main {
     width: 100%;
     height: 100vh;
     box-sizing: border-box;
-    background-color: darkgray;
-    border: 2px solid red;
+    background-color: #f6f5f7;
     display: flex;
     justify-content: center;
     align-items: center;
   }
 
   .outer-div{
-    border: 2px solid red;
     height: 67%;
     width: 53%;
     display: flex;
     border-radius: 10px;
+    box-shadow: 0 14px 28px rgb(0 0 0 / 25%), 0 10px 10px rgb(0 0 0 / 22%);
   }
 
   .left-div{
       width: 50%;
       height: 100%;
-      border: 2px solid green;
+      background-color: white;
       box-sizing: border-box;
-      padding: 0px 35px;
+      padding: 0px 50px;
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
+      border-radius: 10px 0px 0px 10px;
+
+  }
+
+  .social-container{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+    margin-bottom: 6%;
+  }
+
+  .link{
+    border: lightgray 1px solid;
+    box-sizing: border-box;
+    margin: 0px 7px;
+    height: 40px;
+    width: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 40px;
+  }
+
+  #link{
+    cursor: pointer;
+  }
+
+  .left-div span{
+    font-size: 12px;
   }
 
   .button-1{
-    font-size: 12px;
+    font-size: 13px;
     width: 100%;
-    border: red 2px solid;
+    border: none;
     color: black;
-    padding: 12px 45px;
-    /* border-radius: 40px; */
+    padding: 12px 15px;
     font-size: 12px arial;
     box-sizing: border-box;
     margin-top: 10px;
-    background-color: whitesmoke;
+    background-color: #eee;
     /* background: linear-gradient(to right, #FF4B2B, #FF416C); */
+}
+
+.left-div a{
+  margin: 8% 0% 5% 0%;
+  color: black;
+  font-size: 14px;
+  text-decoration: none;
+}
+
+.left-div:hover{
+  transition: ease 0.35s;
+  transform:scale(1.05);
 }
 
   .right-div{
     width: 50%;
     height: 100%;
     box-sizing: border-box;
-    border: 2px solid green;
-    /* border-radius: 10px; */
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 0px 35px;
-    /* background: linear-gradient(to right, #FF4B2B, #FF416C); */
-    background-color: rgb(28,41,74);
+    padding: 0px 40px;
+    background: linear-gradient(to right, rgb(252,2,84), rgb(28,41,74));
+    background: linear-gradient(to right, rgb(56,59,112), rgb(252,2,84));
     color: white;
+    border-radius: 0px 10px 10px 0px;
+    /* transform: translateX(0);
+    transition: transform 0.6s ease-in-out; */
+
 }
 
 .right-div h1{
     font-size: 35px;
     font-weight: bolder;
-    /* border: 2px solid green; */
     margin: 0%;
 }
 
@@ -80,7 +119,6 @@
     text-align: center;
     font-size: 15px;
     line-height: 20px;
-    /* border: 2px solid green; */
     margin: 20px 0px 30px;
 }
 
@@ -88,9 +126,91 @@
     font-size: 12px;
     border: white 1px solid;
     color: white;
+    cursor: pointer;
     padding: 12px 45px;
     border-radius: 40px;
     font-size: 12px arial;
-    /* background: linear-gradient(to right, #Frgb(28,41,74)C); */
-    background-color: rgb(28,41,74);
+    background: rgba(0, 0, 0, 0);
+}
+
+.button-2{
+    font-size: 12px;
+    border: white 1px solid;
+    color: white;
+    cursor: pointer;
+    padding: 15px 45px;
+    border-radius: 40px;
+    font-size: 12px arial;
+    background: linear-gradient(to right, rgb(252,2,84), rgb(28,41,74));
+    background: linear-gradient(to right, rgb(56,59,112), rgb(252,2,84));
+}
+
+/* .right-div:hover{
+  transition: ease 0.35s;
+  transform:scale(1.05);
+} */
+
+/* .outer-div:hover{
+  transition: ease 0.35s;
+  transform:scale(1.05);
+} */
+
+.button:hover{
+  transition: ease 0.35s;
+  transform:scale(1.05);
+}
+
+@media (max-width: 800px){
+
+  .button:hover{
+    transition: ease 0.35s;
+    transform:scale(1);
+  }
+
+  .left-div:hover{
+    transition: ease 0.35s;
+    transform:scale(1);
+  }
+
+  body {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100vh;
+    box-sizing: border-box;
+    /* background-color: white; */
+    /* display: flex;
+    justify-content: center;
+    align-items: center; */
+  }
+
+.outer-div{
+  display: flex;
+  flex-direction: column-reverse;
+  height: 100%;
+  width: 100%;
+}
+
+.right-div{
+  width: auto;
+  height: 40%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 10% 5%;
+  border-radius: 0px;
+
+}
+
+.right-div p{
+  text-align: center;
+}
+
+.left-div{
+  width: 100%;
+  height: 60%;
+  border-radius: 0px;
+  padding: 0% 5%;
+}
 }
